Allow cross origin for fonts

--- a/httpd/options/site-config.conf
+++ b/httpd/options/site-config.conf
@@ -8,6 +8,11 @@ ServerName @APACHE_SERVER_NAME
 
     ErrorLog "/var/log/httpd/error_log"
     CustomLog "/var/log/httpd/access_log" combined
+	
+	<FilesMatch "^.+(ttf|woff2|woff)$">
+		Header set "Access-Control-Allow-Origin" "*"
+		Header set "Access-Control-Allow-Methods" "GET"
+	</FilesMatch>
 </VirtualHost>
 
 <VirtualHost _default_:443>
@@ -22,4 +27,9 @@ ServerName @APACHE_SERVER_NAME
 
     ErrorLog "/var/log/httpd/error_log"
     CustomLog "/var/log/httpd/access_log" combined
+	
+	<FilesMatch "^.+(ttf|woff2|woff)$">
+		Header set "Access-Control-Allow-Origin" "*"
+		Header set "Access-Control-Allow-Methods" "GET"
+	</FilesMatch>
 </VirtualHost>
