--- a/php/options/99-xdebug-custom.ini
+++ b/php/options/99-xdebug-custom.ini
@@ -6,6 +6,7 @@ xdebug.remote_enable = @XDEBUG_REMOTE_ENABLE
 xdebug.remote_handler = "@XDEBUG_REMOTE_HANDLER"
 xdebug.remote_host = "@XDEBUG_REMOTE_IP"
 xdebug.remote_port = @XDEBUG_REMOTE_PORT
+xdebug.remote_autostart = @XDEBUG_REMOTE_AUTOSTART
 
 xdebug.idekey = "@XDEBUG_IDE_KEY"
 
